SonarQube final quality fix